insta/tests/snapshots/test_redaction__sorted_redaction_nan_floats.snap
---
source: insta/tests/test_redaction.rs
expression: "&floats"
---
- -inf
- -2.5
- 0
- 1
- 42
- inf
- NaN
- NaN
