insta/tests/snapshots/test_redaction__user_json_settings.snap
---
source: insta/tests/test_redaction.rs
expression: "&User {\n        id: 122,\n        username: \"jason_doe\".to_string(),\n        email: Email(\"jason@example.com\".to_string()),\n        extra: \"ssn goes here\".to_string(),\n    }"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "[extra]"
}
