insta/tests/snapshots/test_redaction__with_random_value_inline_callback.snap
---
source: insta/tests/test_redaction.rs
expression: "&User {\n        id: 23,\n        username: \"john_doe\".to_string(),\n        email: Email(\"john@example.com\".to_string()),\n        extra: \"\".to_string(),\n    }"
---
id: "[id]"
username: john_doe
email: john@example.com
extra: ""
