insta/tests/snapshots/test_redaction__with_random_value_json_match.snap
---
source: insta/tests/test_redaction.rs
expression: "&User {\n        id: 9999,\n        username: \"jason_doe\".to_string(),\n        email: Email(\"jason@example.com\".to_string()),\n        extra: \"ssn goes here\".to_string(),\n    }"
---
{
  "id": "[id]",
  "username": "jason_doe",
  "email": "jason@example.com",
  "extra": "[extra]"
}
